Rename codemirror css

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Simple HTML Editor</title>
+<title>HTML Editor</title>
 <meta name="google" content="notranslate">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -49,7 +49,7 @@ h2.title {
 <script src="mode/javascript.js"></script>
 <script src="mode/css.js"></script>
 <script src="mode/htmlmixed.js"></script>
-<link rel="stylesheet" href="css/codemirror.css">
+<link rel="stylesheet" href="css/00-codemirror.css">
 <link rel="stylesheet" href="css/monokai.css">
 <style>
 .editor, .preview, .CodeMirror {
