Center the title

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@ h2.title {
     text-align: center;
 }
 </style>
+<!-- BEGIN CODEMIRROR -->
 <script src="lib/codemirror.js"></script>
 <script src="mode/xml.js"></script>
 <script src="mode/javascript.js"></script>
@@ -51,6 +52,7 @@ h2.title {
 <script src="mode/htmlmixed.js"></script>
 <link rel="stylesheet" href="css/00-codemirror.css">
 <link rel="stylesheet" href="css/monokai.css">
+<!-- END CODEMIRROR -->
 <style>
 .editor, .preview, .CodeMirror {
     height: 100%;
