--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@ body {
     box-sizing: border-box;
     height: 100%;
     color: #999;
+    background-color: #272822;
 }
 a, a:hover {
     color: inherit;
@@ -34,14 +35,80 @@ h2.title {
     display: block;
     width: 100%;
     padding: 0.5em 0.5em 0.5em 1em;
-    background-color: #272822;
     font-size: 1.2em;
     font-weight: normal;
     box-sizing: border-box;
-    border-bottom: 1px solid #333;
 }
 .text-center {
     text-align: center;
+}
+.hide {
+    display: none;
+}
+.border-bottom {
+    border-bottom: 1px solid #333;
+}
+.menu-icon {
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    top: 0.3em;
+    z-index: 10;
+}
+.linemenu {
+    width: 24px;
+    height: 4px;
+    background-color: #999;
+    margin: 4px 0;
+    display: block;
+}
+.menu {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    box-sizing: border-box;
+    min-height: 100%;
+    padding-top: 2em;
+    padding-right: 2em;
+    display: none;
+    background-color: inherit;
+}
+ul.menu-list {
+    list-style: none;
+    padding-left: 1.5em;
+}
+ul.menu-list li a {
+    display: block;
+    padding: 0.2em 0.5em 0.4em 0.5em;
+    border-bottom: 1px solid #333;
+    margin-bottom: 0.5em;
+}
+.menu:target {
+    display: block;
+}
+.menu-close {
+    padding: 0.5em;
+    position: absolute;
+    top: 0;
+    right: 1em;
+    background-color: black;
+}
+.menu-footer {
+    font-size: 0.7em;
+    position: absolute;
+    bottom: 1.5em;
+    width: 100%;
+}
+.menu-footer span {
+    display: block;
+    margin-bottom: 0.4em;
+    text-align: center;
+}
+.menu-footer span a {
+    color: #fff;
 }
 </style>
 <!-- BEGIN CODEMIRROR -->
@@ -59,7 +126,7 @@ h2.title {
     width: 100%;
     position: relative;
 }
-.editor, .CodeMirror {
+.editor {
     padding-bottom: 4em;
 }
 .preview #preview {
@@ -74,6 +141,15 @@ h2.title {
         float: left;
         padding-bottom: 0;
     }
+    .full-width {
+        width: 100%;
+        float: initial;
+    }
+    .menu {
+        width: 300px;
+        border-right: 1px dotted #999;
+        border-bottom: 1px dotted #999;
+    }
     .preview {
         width: 50%;
         float: left;
@@ -83,18 +159,52 @@ h2.title {
 </style>
 </head>
 <body>
+<!-- MENU ICON -->
+<div id="menu-icon" class="menu-icon">
+    <a title="Klik untuk membuka menu" href="#menu">
+        <span class="linemenu"></span>
+        <span class="linemenu"></span>
+        <span class="linemenu"></span>
+    </a>
+</div>
+
+<!-- MENU WINDOW -->
+<div id="menu" class="menu">
+    <div class="menu-close"><a title="Tutup menu" href="#">X</a></div>
+    <ul class="menu-list">
+        <li><a id="menu-open-file" href="#">Open File...</a></li>
+        <li><a id="menu-save-file" href="#">Save As...</a></li>
+        <li><a id="menu-word-wrap" href="#" data-word-wrap="no">Word Wrap</a></li>
+        <li><a id="menu-show-preview" href="#" data-show-preview="yes">Preview Window &#x2713</a></li>
+    </ul>
+    <div class="menu-footer">
+        <span>HTML Editor v1.0</span>
+        <span>Made with &#x2665; by <a href="https://rioastamal.net/">Rio Astamal</a></span>
+    </div>
+</div>
+
+<!-- EDITOR WINDOW -->
 <div class="editor">
-    <h2 class="title text-center">Editor</h2>
+    <h2 class="title text-center border-bottom">Editor</h2>
     <textarea id="editor"></textarea>
 </div>
+
+<!-- PREVIEW WINDOW -->
 <div class="preview">
-    <h2 class="title text-center">Preview</h2>
+    <h2 class="title text-center border-bottom">Preview</h2>
     <iframe id="preview"></iframe>
 </div>
+
+<!-- HIDDEN INPUT FILE -->
+<input type="file" id="file-open-input" accept=".html,.htm,.txt" class="hide">
 </body>
 <script>
 var editor = document.getElementById('editor');
 var preview = document.getElementById('preview');
+var menu = document.getElementById('menu');
+var fileOpenInput = document.getElementById('file-open-input');
+var previeWrapper = document.getElementsByClassName('preview')[0];
+var EditorWrapper = document.getElementsByClassName('editor')[0];
 var cm;
 
 function updatePreview(content)
@@ -102,6 +212,91 @@ function updatePreview(content)
     preview.contentWindow.document.open();
     preview.contentWindow.document.write(content);
     preview.contentWindow.document.close();
+}
+
+document.getElementById('menu-open-file').onclick = function(e)
+{
+    if (fileOpenInput) {
+        fileOpenInput.click();
+    }
+}
+
+document.getElementById('menu-save-file').onclick = function(e)
+{
+    saveAsFile('index.html', cm.getValue());
+}
+
+document.getElementById('menu-word-wrap').onclick = function(e)
+{
+    var currentWordWrapStatus = this.getAttribute('data-word-wrap');
+    if (currentWordWrapStatus == 'no') {
+        cm.setOption('lineWrapping', true);
+        this.setAttribute('data-word-wrap', 'yes');
+        this.innerHTML = 'Word Wrap &#x2713';
+
+        return false;
+    }
+
+    cm.setOption('lineWrapping', false);
+    this.setAttribute('data-word-wrap', 'no');
+    this.innerHTML = 'Word Wrap';
+    return false;
+}
+
+document.getElementById('menu-show-preview').onclick = function(e)
+{
+    var currentPreviewStatus = this.getAttribute('data-show-preview');
+
+    if (currentPreviewStatus == 'no') {
+        previeWrapper.className = 'preview';
+        EditorWrapper.className = 'editor';
+        this.setAttribute('data-show-preview', 'yes');
+        this.innerHTML = 'Preview Window &#x2713';
+
+        return false;
+    }
+
+    previeWrapper.className = 'preview hide';
+    EditorWrapper.className = 'editor full-width';
+    this.setAttribute('data-show-preview', 'no');
+    this.innerHTML = 'Preview Window';
+    return false;
+}
+
+fileOpenInput.onchange = function(e)
+{
+    var file = fileOpenInput.files[0];
+    var reader = new FileReader();
+    console.log(file.type);
+
+    reader.onload = function(e) {
+        cm.setValue(reader.result);
+    }
+    reader.readAsText(file);
+}
+
+/**
+ * @credit https://stackoverflow.com/a/33542499
+ */
+function saveAsFile(filename, data)
+{
+    var blob = new Blob([data], {type: 'text/html'});
+
+    if (window.navigator.msSaveOrOpenBlob) {
+        window.navigator.msSaveBlob(blob, filename);
+
+        return;
+    }
+
+    var elem = window.document.createElement('a');
+    elem.href = window.URL.createObjectURL(blob);
+    elem.download = filename;
+    document.body.appendChild(elem);
+
+    elem.click();
+    document.body.removeChild(elem);
+
+    window.URL.removeObjectURL(blob);
 }
 
 cm = CodeMirror.fromTextArea(editor, {
