Minor tag changes at the end of body

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>HTML Editor</title>
@@ -197,7 +197,6 @@ ul.menu-list li a {
 
 <!-- HIDDEN INPUT FILE -->
 <input type="file" id="file-open-input" accept=".html,.htm,.txt" class="hide">
-</body>
 <script>
 var editor = document.getElementById('editor');
 var preview = document.getElementById('preview');
@@ -309,4 +308,5 @@ cm.on('change', function() {
     updatePreview(cm.getValue());
 });
 </script>
+</body>
 </html>
