--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@ ul.menu-list li span {
         <li><a id="menu-contribute" href="https://github.com/rioastamal/html-editor/" target="_blank">Contribute</a></li>
     </ul>
     <div class="menu-footer">
-        <span>HTML Editor v1.0</span>
+        <span>HTML Editor v{{APP_VERSION}}</span>
         <span>Made with &#x2665; by <a href="https://rioastamal.net/">Rio Astamal</a></span>
     </div>
 </div>
