Change shortcut to CTRL+Shift+M for Manual Preview

--- a/src/index.html
+++ b/src/index.html
@@ -446,7 +446,7 @@ document.onkeyup = function(e)
         document.getElementById('menu-show-preview').click();
     }
 
-    if (e.ctrlKey && e.shiftKey && theChar == 'P') {
+    if (e.ctrlKey && e.shiftKey && theChar == 'M') {
         document.getElementById('menu-manual-preview').click();
     }
 
